--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>web</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.whf</groupId>
+            <artifactId>swagger2</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
