--- a/framework/orm/pom.xml
+++ b/framework/orm/pom.xml
@@ -5,17 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.whf</groupId>
-        <artifactId>r-pan</artifactId>
+        <artifactId>framework</artifactId>
         <version>1.0</version>
     </parent>
 
-    <artifactId>framework</artifactId>
+    <artifactId>orm</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>core</module>
-        <module>web</module>
-        <module>swagger2</module>
-        <module>orm</module>
+        <module>mybatis-plus</module>
     </modules>
 
     <properties>
@@ -23,5 +20,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+
 
 </project>
