--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -11,6 +11,15 @@ spring:
     multipart:
       max-file-size: 3072MB
       max-request-size: 3072MB
+  # 配置数据库连接和 mybatis-plus
+  datasource:
+    username: root
+    password: 123456
+    url: jdbc:mysql://127.0.0.1:3306/r_pan?characterEncoding=utf8&serverTimezone=Asia/Shanghai&useSSL=false&allowPublicKeyRetrieval=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+mybatis-plus:
+  mapper-locations: classpath:mappers/**/*.xml
 
 server:
   port: 8080
@@ -37,3 +46,4 @@ logging:
   file: D:\logs\${spring.application.name}\${spring.application.name}.log
   level:
     root: INFO
+
