--- a/server/pom.xml
+++ b/server/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>cache-redis</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
