集成 FastDFS 文件处理器

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -50,3 +50,13 @@ logging:
   level:
     root: INFO
 
+com:
+  whf:
+    pan:
+      storage:
+        engine:
+          fdfs:
+            connect-timeout: 600
+            tracker-list:
+              - 115.159.69.196:22122
+            group: group1
