文件存储引擎初始化器

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -61,8 +61,8 @@ logging:
 ##              - ip:端口
 ##            group: group1
 #          oss:
-#            bucket-name: king-hf-bucket
-#            endpoint: oss-cn-shanghai.aliyuncs.com
-#            access-key-id: LTAI5tPr81ofKDqjFNPcCRqM
-#            access-key-secret: e9rsuHOJunSIjhRiZomOxIkiETcEt4
+#            bucket-name: xxxxxxxxx
+#            endpoint: xxxxxxxxx
+#            access-key-id: xxxxxxxxx
+#            access-key-secret: xxxxxxxxx
 #            auto-create-bucket: true
