--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.9.RELEASE</version>
+        <version>2.2.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.whf</groupId>
@@ -30,7 +30,7 @@
         <mysql-connector.version>8.0.11</mysql-connector.version>
         <mybatis-plus.version>3.3.2</mybatis-plus.version>
         <velocity.version>2.3</velocity.version>
-        <jackson.version>2.9.8</jackson.version>
+        <jackson.version>2.10.2</jackson.version>
         <guava.version>20.0</guava.version>
         <commons-lang3.version>3.5</commons-lang3.version>
         <commons-collections.version>3.2.1</commons-collections.version>
@@ -47,6 +47,8 @@
         <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
         <projectlombok.version>1.18.20</projectlombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
+        <spring-cloud-alibaba.version>2.2.1.RELEASE</spring-cloud-alibaba.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -187,7 +189,7 @@
                     <source>8</source>
                     <target>8</target>
                     <encoding>utf-8</encoding>
-                    <skip>true</skip>
+                    <!--<skip>true</skip>-->
                 </configuration>
             </plugin>
             <!--版本管理插件-->
