--- a/framework/bloom-filter/pom.xml
+++ b/framework/bloom-filter/pom.xml
@@ -5,22 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.whf</groupId>
-        <artifactId>r-pan</artifactId>
+        <artifactId>framework</artifactId>
         <version>1.0</version>
     </parent>
 
-    <artifactId>framework</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>core</module>
-        <module>web</module>
-        <module>swagger2</module>
-        <module>orm</module>
-        <module>cache</module>
-        <module>schedule</module>
-        <module>storage-engine</module>
-        <module>bloom-filter</module>
+        <module>bloom-filter-core</module>
+        <module>bloom-filter-local</module>
     </modules>
+
+    <artifactId>bloom-filter</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
