业务集成布隆过滤器

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -71,7 +71,13 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.whf</groupId>
+            <artifactId>bloom-filter-local</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <finalName>server</finalName>
