--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -66,3 +66,24 @@ logging:
 #            access-key-id: xxxxxxxxx
 #            access-key-secret: xxxxxxxxx
 #            auto-create-bucket: true
+com:
+  whf:
+    pan:
+      #            storage:
+      #                engine:
+      #                    oss:
+      #                        bucket-name: pan-imooc-test-1
+      #                        endpoint: oss-cn-beijing.aliyuncs.com
+      #                        access-key-id: LTAI5tJiLByyUfFwWYEXZFvg
+      #                        access-key-secret: Fm5rkdaHCkwaFqOfm6Md21mIi26cjv
+      #                        auto-create-bucket: true
+      server:
+        share-prefix: http://127.0.0.1:5173/
+      bloom:
+        filter:
+          local:
+            items:
+              -   name: SHARE_SIMPLE_DETAIL
+                  funnel-type-name: LONG
+                  expected-insertions: 10000000
+                  fpp: 0.01
