--- a/framework/lock/lock-local/pom.xml
+++ b/framework/lock/lock-local/pom.xml
@@ -16,5 +16,11 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.whf</groupId>
+            <artifactId>lock-core</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 </project>
