--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,11 @@
                 <artifactId>lombok</artifactId>
                 <version>${projectlombok.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.integration</groupId>
+                <artifactId>spring-integration-redis</artifactId>
+                <version>${spring-integration.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
