--- a/server/pom.xml
+++ b/server/pom.xml
@@ -51,21 +51,21 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.whf</groupId>
-            <artifactId>storage-engine-local</artifactId>
-            <version>1.0</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.whf</groupId>-->
+<!--            <artifactId>storage-engine-local</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--        </dependency>-->
 <!--        <dependency>-->
 <!--            <groupId>com.whf</groupId>-->
 <!--            <artifactId>storage-engine-fastdfs</artifactId>-->
 <!--            <version>1.0</version>-->
 <!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>com.whf</groupId>-->
-<!--            <artifactId>storage-engine-oss</artifactId>-->
-<!--            <version>1.0</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.whf</groupId>
+            <artifactId>storage-engine-oss</artifactId>
+            <version>1.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
@@ -74,6 +74,11 @@
         <dependency>
             <groupId>com.whf</groupId>
             <artifactId>bloom-filter-local</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.whf</groupId>
+            <artifactId>lock-redis</artifactId>
             <version>1.0</version>
         </dependency>
     </dependencies>
