--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -69,14 +69,14 @@ logging:
 com:
   whf:
     pan:
-      #            storage:
-      #                engine:
-      #                    oss:
-      #                        bucket-name: pan-imooc-test-1
-      #                        endpoint: oss-cn-beijing.aliyuncs.com
-      #                        access-key-id: LTAI5tJiLByyUfFwWYEXZFvg
-      #                        access-key-secret: Fm5rkdaHCkwaFqOfm6Md21mIi26cjv
-      #                        auto-create-bucket: true
+      storage:
+          engine:
+              oss:
+                bucket-name: pan-whf-bucket
+                endpoint: oss-cn-shanghai.aliyuncs.com
+                access-key-id: LTAI5tPr81ofKDqjFNPcCRqM
+                access-key-secret: e9rsuHOJunSIjhRiZomOxIkiETcEt4
+                auto-create-bucket: true
       server:
         share-prefix: http://127.0.0.1:5173/
       bloom:
