--- a/framework/stream/pom.xml
+++ b/framework/stream/pom.xml
@@ -5,24 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.whf</groupId>
-        <artifactId>r-pan</artifactId>
+        <artifactId>framework</artifactId>
         <version>1.0</version>
     </parent>
 
-    <artifactId>framework</artifactId>
+    <artifactId>stream</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>core</module>
-        <module>web</module>
-        <module>swagger2</module>
-        <module>orm</module>
-        <module>cache</module>
-        <module>schedule</module>
-        <module>storage-engine</module>
-        <module>bloom-filter</module>
-        <module>lock</module>
-        <module>lock/lock-zookeeper</module>
-        <module>stream</module>
+        <module>stream-core</module>
     </modules>
 
     <properties>
